# kata-pak-feri-acc

./: README.md  WIRING_DOCUMENTATION.md  WIRING_GUIDE.md  autnomus.ino  rc.ino
get_mac_address/: get_mac_address.ino
joystick_test/: joystick_test.ino
master/: CMakeLists.txt  sdkconfig.defaults
master/main/: CMakeLists.txt  config.h  fsm.c  fsm.h  main.c  types.h
master/main/comm/: espnow_handler.c  espnow_handler.h
master/main/drivers/: buttons.c  buttons.h  buzzer.c  buzzer.h  display.c  display.h  motor.c  motor.h  nvs_storage.c  nvs_storage.h
master/main/modes/: mode_mecanum.c  mode_mecanum.h  mode_menu.c  mode_menu.h  mode_rc.c  mode_rc.h  mode_settings.c  mode_settings.h  mode_voice.c  mode_voice.h
master/main/ui/: ui_common.c  ui_common.h
master_interpretate_test/: master_interpretate_test.ino
master_ui_test/: master_ui_test.ino
master_wiring_test/: master_wiring_test.ino
rc_mecanum/: rc_mecanum.ino
remote_transmitter/: remote_transmitter.ino
web_transmitter/: web_transmitter.ino
web_transmitter_fast/: web_transmitter_fast.ino
